--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9aa9c87e-4dfa-4cb1-a610-31b37afe29fd"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
